--- a/RegTechChallenge.ipynb
+++ b/RegTechChallenge.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "164d93a0",
    "metadata": {
     "scrolled": true
@@ -45,9 +45,9 @@
      "text": [
       "Requirement already satisfied: numpy in c:\\programdata\\anaconda3\\lib\\site-packages (1.20.3)\n",
       "Requirement already satisfied: pdfplumber in c:\\programdata\\anaconda3\\lib\\site-packages (0.6.0)\n",
+      "Requirement already satisfied: pdfminer.six==20211012 in c:\\programdata\\anaconda3\\lib\\site-packages (from pdfplumber) (20211012)\n",
       "Requirement already satisfied: Pillow>=8.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from pdfplumber) (8.4.0)\n",
       "Requirement already satisfied: Wand>=0.6.7 in c:\\programdata\\anaconda3\\lib\\site-packages (from pdfplumber) (0.6.7)\n",
-      "Requirement already satisfied: pdfminer.six==20211012 in c:\\programdata\\anaconda3\\lib\\site-packages (from pdfplumber) (20211012)\n",
       "Requirement already satisfied: chardet in c:\\programdata\\anaconda3\\lib\\site-packages (from pdfminer.six==20211012->pdfplumber) (4.0.0)\n",
       "Requirement already satisfied: cryptography in c:\\programdata\\anaconda3\\lib\\site-packages (from pdfminer.six==20211012->pdfplumber) (3.4.8)\n",
       "Requirement already satisfied: cffi>=1.12 in c:\\programdata\\anaconda3\\lib\\site-packages (from cryptography->pdfminer.six==20211012->pdfplumber) (1.14.6)\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "d42fd7ff",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "852ad816",
    "metadata": {},
    "outputs": [],
@@ -296,12 +296,12 @@
    "id": "40b4ede8",
    "metadata": {},
    "source": [
-    "0. Parameters"
+    "<li> 0. Parameters </li>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "bc5239ac",
    "metadata": {},
    "outputs": [],
@@ -320,12 +320,12 @@
    "id": "6df8641e",
    "metadata": {},
    "source": [
-    "1. Read json data"
+    "<li>1. Read json data</li>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "12781a23",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
        "  'issuer': {'type': 'central_govt'}}]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,12 +384,12 @@
    "id": "f5b04a17",
    "metadata": {},
    "source": [
-    "2. Download Regulation file"
+    "<li>2. Download Regulation file</li>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "3f81f9bd",
    "metadata": {},
    "outputs": [
@@ -417,12 +417,12 @@
    "id": "9a179d14",
    "metadata": {},
    "source": [
-    "3. Read (extract) text from PDF"
+    "<li>3. Read (extract) text from PDF</li>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "60a2d435",
    "metadata": {},
    "outputs": [
@@ -459,12 +459,12 @@
    "id": "86107b48",
    "metadata": {},
    "source": [
-    "4. Calculating K-TCD"
+    "<li>4. Calculating K-TCD</li>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "e6c82e5f",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,8 @@
     "pfe = 0\n",
     "\n",
     "# Article 30\n",
-    "C = (1-0.00707)*jl['asset']['mtm_dirty']\n",
+    "adjustment = 0.00707\n",
+    "C = (1-adjustment)*jl['asset']['mtm_dirty']\n",
     "\n",
     "# Article 27, exposure value\n",
     "EV = max(0,rc+pfe-C)\n",
