--- a/RegTechChallenge.ipynb
+++ b/RegTechChallenge.ipynb
@@ -38,27 +38,11 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in c:\\programdata\\anaconda3\\lib\\site-packages (1.20.3)\n",
-      "Requirement already satisfied: pdfplumber in c:\\programdata\\anaconda3\\lib\\site-packages (0.6.0)\n",
-      "Requirement already satisfied: pdfminer.six==20211012 in c:\\programdata\\anaconda3\\lib\\site-packages (from pdfplumber) (20211012)\n",
-      "Requirement already satisfied: Wand>=0.6.7 in c:\\programdata\\anaconda3\\lib\\site-packages (from pdfplumber) (0.6.7)\n",
-      "Requirement already satisfied: Pillow>=8.4 in c:\\programdata\\anaconda3\\lib\\site-packages (from pdfplumber) (8.4.0)\n",
-      "Requirement already satisfied: cryptography in c:\\programdata\\anaconda3\\lib\\site-packages (from pdfminer.six==20211012->pdfplumber) (3.4.8)\n",
-      "Requirement already satisfied: chardet in c:\\programdata\\anaconda3\\lib\\site-packages (from pdfminer.six==20211012->pdfplumber) (4.0.0)\n",
-      "Requirement already satisfied: cffi>=1.12 in c:\\programdata\\anaconda3\\lib\\site-packages (from cryptography->pdfminer.six==20211012->pdfplumber) (1.14.6)\n",
-      "Requirement already satisfied: pycparser in c:\\programdata\\anaconda3\\lib\\site-packages (from cffi>=1.12->cryptography->pdfminer.six==20211012->pdfplumber) (2.20)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# If you have already installed these libraries, comment these lines:\n",
-    "!pip install numpy\n",
-    "!pip install pdfplumber"
+    "# !pip install numpy\n",
+    "# !pip install pdfplumber"
    ]
   },
   {
@@ -526,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
